# privacy-vault

./: .gitignore  LICENSE  LOVABLE_PROMPT.md  PLAN.md  README.md  SECURITY.md
app/: package-lock.json  package.json
circuits/nullifier-example/: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  package-lock.json  package.json  tsconfig.json
circuits/nullifier-example/programs/nullifier/: Cargo.toml  Xargo.toml
circuits/nullifier-example/programs/nullifier/src/: lib.rs
circuits/nullifier-example/programs/nullifier/tests/: test.rs
circuits/nullifier-example/ts-tests/: nullifier.test.ts
frontend-lovable/: index.html  package-lock.json  package.json  tailwind.config.ts  test-e2e.mjs  vite.config.ts
frontend-lovable/public/circuits/: innocence.wasm  withdraw.wasm  withdraw_0000.zkey
frontend-lovable/src/: App.tsx  index.css  main.tsx
frontend-lovable/src/components/: BridgeWidget.tsx  Header.tsx  Partners.tsx  Starfield.tsx  StatusBar.tsx  VaultWidget.tsx
frontend-lovable/src/components/bridge/: DepositTab.tsx  ProveTab.tsx  WithdrawTab.tsx
frontend-lovable/src/components/ui/: checkbox.tsx  toast.tsx
frontend-lovable/src/hooks/: use-toast.ts  usePrivacyVault.ts
frontend-lovable/src/idl/: privacy_vault.ts
frontend-lovable/src/lib/: associationSets.ts  relayer.ts  tokens.ts  utils.ts  zkProofs.ts
frontend-lovable/src/pages/: Index.tsx
frontend-lovable/src/providers/: WalletProvider.tsx
programs/privacy-vault/: Anchor.toml  CLAUDE.md  Cargo.toml  README.md  Xargo.toml  build.rs  package-lock.json  package.json  test-manual.ts
programs/privacy-vault/circuits/: README.md  compressed_account.circom  compressed_account_merkle_proof.circom  convert_vkey_to_solana.js  convert_vkey_to_solana_v2.js  credential.circom  merkle_proof.circom  package-lock.json  package.json
programs/privacy-vault/programs/zk-id/: Cargo.toml
programs/privacy-vault/programs/zk-id/src/: lib.rs  verifying_key.rs
programs/privacy-vault/scripts/: clean.sh  setup.sh
programs/privacy-vault/tests/: circuit.rs  test.rs
programs/privacy-vault/ts-tests/: zk-id.test.ts
relayer/: .env.example  association-sets.js  package-lock.json  package.json  relayer-keypair.json  server.js
(+8 files in other folders)
