[package]
name = "nullifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nullifier"

[features]
default = []
test-sbf = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
borsh = "0.10.4"
light-sdk = { version = "0.17.1", features = ["anchor"] }
light-sdk-types = { version = "0.17.1", features = ["v2"] }

[dev-dependencies]
light-program-test = { version = "0.17.1", features = ["v2"] }
light-client = { version = "0.17.2", features = ["v2"] }
light-hasher = "5.0.0"
tokio = "1.40.0"
solana-sdk = "2.2"
light-compressed-account = { version = "0.7.0", features = ["new-unique"] }

